--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(180deg, rgba(125, 218, 255, 1) 0%, rgb(122, 82, 204) 100%);
+    background-color: #343341;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
@@ -7,6 +7,8 @@ body {
     width: 100vw;
     overflow: hidden;
 }
+
+
 
 /* Animation des dégâts */
 .damage-text {
